# amaank404.github.io

./: 404.html  build.py  build_assets.py  index.html  live_build.py  pyproject.toml  sitemap.xml  xcodz_dotgithubio.nimble
.github/workflows/: build.yaml
blog/: 1.html  2.html  beginning.html  index.html  test_article.html
blog_src/: 1.md  2.md  beginning.md  test_article.md
clicker/: index.html
clicker/static/: main.css  main.js
content/: index.html
denver/: 404.html  bdtp.html  bdtp_file_server.html  beautiful_cli.html  bitmap.html  cipher.html  colored_text.html  data_representation.html  encryption.html  function_logger.html  graphics2d.html  graphics3d.html  index.html  input_utils.html  pyelib.html  raw_data.html  recursive_imports.html  setup_utils.html  sitemap.xml  sound.html  source_imports_analyser.html  text_utils.html  thread_control.html  unicode_utils.html
denver/autopyb/: index.html
denver/brief/: index.html
denver/clineutils/: index.html  rmr.html  rmrdir.html
denver/denverapi/: bdtp.html  bdtp_file_server.html  beautiful_cli.html  bitmap.html  cipher.html  encryption.html  graphics2d.html  graphics3d.html  keyboard.html  pyelib.html  sound.html  source_imports_analyser.html  thread_control.html  unicode_utils.html
denver/installation/: index.html
denver/search/: search_index.json
denver/tools/: cryptify.html  (+2 more)
search/: search_index.json
src/: jsstuff.nim  main.nim
static/: blog.css  blog.js  code_highlight_pygments.css  colors.css  common.css  main.js  navbar.css  styles.css  utils.js
templates/: blog.html  index_item.html
(+42 files in other folders)
