[tool.poetry]
name = "amaank404githubio"
version = "0.1.0"
description = ""
authors = ["Amaan <71920621+amaank404@users.noreply.github.com>"]
license = "GPL-3.0-ONLY"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
markdown2 = "^2.5.1"
jinja2 = "^3.1.4"
pygments = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
